Lots of stuff about debugging

--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -1,3 +1,10 @@
+a{
+    display: inline-block;
+}
+svg{
+    color: black;
+}
+
 .techfont{
     font-family: 'Russo One', sans-serif;
     font-size: 1.5em;
