--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -19,14 +19,14 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Russo+One&display=swap" rel="stylesheet">
 
 </head>
-<body class="loader">
+<body>
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark techfont custom-navbar">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'blog:post_list' %}">Mutter</a>
+            <a class="navbar-brand" href="{% url 'post_list' %}">Mutter</a>
             <ul class="nav navbar-nav mr-auto">
-                <li class="nav-item"><a class="nav-link" href="{% url 'blog:about' %}">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="https://www.github.com">GitHub</a></li class="nav-item">
                 <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com">linkedIn</a></li>
             </ul>
@@ -34,10 +34,10 @@
             <ul class="nav navbar-nav ml-auto">
                 {% if user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'blog:post_new' %}">New Post</a class="nav-link">
+                    <a class="nav-link" href="{% url 'post_new' %}">New Post</a class="nav-link">
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'blog:post_draft_list' %}">Draft</a class="nav-link">
+                    <a class="nav-link" href="{% url 'post_draft_list' %}">Draft</a class="nav-link">
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'logout' %}">Log Out</a class="nav-link">
