--- a/mysite/blog/templates/blog/post_form.html
+++ b/mysite/blog/templates/blog/post_form.html
@@ -7,7 +7,7 @@
         <button type="submit" class="save btn btn-primary">Save</button>
     </form>
 
-    <script type='text/javascript'>
+    <script>
         var editor = new MediumEditor('.editable');
     </script>
 {% endblock %}
