Site functional. Needs patches

--- a/mysite/blog/templates/blog/post_list.html
+++ b/mysite/blog/templates/blog/post_list.html
@@ -3,16 +3,18 @@
     <div class="centerstage">
         <!-- post_list is the default name for the list generated with the list view (name + _list) -->
         {% for post in post_list %}
+
         <div class="post">
-            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <h1 class="loader"><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
             <div class="date">
 
                 <!-- keep everything stuck together when using filters  -->
-                <p>Published on: {{ post.published|date:"D M Y" }}</p>
+                <p>Published on: {{ post.published_date|date:"d M Y" }}</p>
 
             </div>
-            <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{post.approved_comments.count }} </a>
+            <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{post.approve_comments.count }} </a>
         </div>
+        <hr>
         {% empty %}
         <h1>No post yet!</h1>
         {% endfor %}
